[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aw-watcher-window"
version = "0.3.0"
description = "Window watcher for ActivityWatch"
authors = ["Erik Bjäreholt <erik@bjareho.lt>", "Johan Bjäreholt <johan@bjareho.lt>"]
license = "MPL-2.0"

[tool.poetry.scripts]
aw-watcher-window = "aw_watcher_window:main"

[tool.poetry.dependencies]
python = "^3.9"
aw-client = "^0.5.14"
pywin32 = {version = "306", platform = "win32"}
wmi = {version = "*", platform = "win32"}
pyobjc = { version = "11.0", platform="darwin"}
pyobjc-framework-ApplicationServices = { version = "11.0", platform="darwin"}
pyobjc-framework-CoreText = {version = "11.0", platform="darwin"}
pyobjc-framework-OSAKit = {version = "11.0", platform="darwin"}
pyobjc-framework-Quartz = {version = "11.0", platform="darwin"}

# locked due to https://github.com/python-xlib/python-xlib/pull/242 leading to 100% CPU stalls
# see: https://github.com/ActivityWatch/aw-watcher-window/issues/89
# also locked in aw-watcher-afk
python-xlib = {version = "0.31", platform = "linux"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
mypy = "^0.942"
black = "^22.3.0"
pre-commit = "^2.18.1"
